#VERSION 0.8.6#

 - moved class Peak_Bootstrap to /Application/ folder and renamed it Peak_Application_Bootstrap

 - added methods setVars() and addVars() to Peak_View

 - fixed minor problem of css style in Peak_View_Helper_Debugbar

 - fixed method validate() for array key errors that do not exists in Peak_Filters_Advanced

 - updated method output of Peak_View_Helper_Form_Select and Peak_View_Helper_Form_Input

#VERSION 0.8.5#

 - added Peak_View_Helper_TagAttrs, Peak_View_Helper_Form, Peak_View_Helper_Form_Select, Peak_View_Helper_Form_Input

 - added special filters in Peak_Filters_Advanced and fixed method validate()

 - fixed minor bug in Peak_View_Render_Layouts::render()

 - fixed minor bug in method getFiles() from Peak_View_Helper_Debug

 - added punctuation option in method Peak_Filters_Advanced::_filter_alpha()

 - added method flushVars() to Peak_Config

 - added class Peak_Controller_Helper_Post

 - fixed a bug in method Peak_Filters_Advanced::_filter_alpha()

 - added class Peak_Model_DataObject

 - deleted deprecated class Peak_View_Helper_Icon
 
 - rewrited method iniVar() from Peak_View to use Peak_Config_Ini.
 
 - deleted property $actions and renamed method listActions() to getActions() in Peak_Controller_Action.

 - deleted properties $name and $title in favor of new methods getName() and getTitle() in Peak_Controller_Action and 
   modified initController() method accordingly.

 - modified exception constants messages in Peak_Exception.

 - removed method setRenderEngine() and moved code in engine() method. Use engine() for setting and getting render engine instead.

 - changed property $params_assoc from array to config object and added method params() to make easy access to params key name.
   instead of accessing to params with $this->params_assoc['var'], we use now something like this: $this->params()->var.

 - added method __construct() to Peak_Config.
